obscurred email with new form

--- a/index.html
+++ b/index.html
@@ -179,18 +179,18 @@
     
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="https://formsubmit.co/tjensen917@outlook.com" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <textarea name="message" placeholder="Your Message" required></textarea>
-  <button type="submit">Send Message</button>
-
-  <!-- Optional hidden settings -->
-  <input type="hidden" name="_subject" value="New portfolio message!">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://yourportfolio.com/thank-you.html">
-</form>
-
+        <form action="https://formspree.io/f/xanjajzq" method="POST">
+            <label>
+                Your email:
+                <input type="email" name="email">
+            </label>
+            <label>
+                Your message:
+                <textarea name="message"></textarea>
+            </label>
+            <!-- your other form fields go here -->
+            <button type="submit">Send</button>
+            </form>
     </section>
 
     
