updated styling for new form

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <textarea name="message"></textarea>
             </label>
             <!-- your other form fields go here -->
-            <button type="submit">Send</button>
+            <button type="submit">Send message</button>
             </form>
     </section>
 
