--- a/index.html
+++ b/index.html
@@ -179,18 +179,14 @@
     
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="https://formspree.io/f/xanjajzq" method="POST">
-            <label>
-                Your email:
-                <input type="email" name="email">
-            </label>
-            <label>
-                Your message:
-                <textarea name="message"></textarea>
-            </label>
-            <!-- your other form fields go here -->
-            <button type="submit">Send message</button>
-            </form>
+        <form action="https://formspree.io/f/xanjajzq" method="POST" id="contact-form">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
     </section>
 
     
