--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <form action="https://formspree.io/f/xanjajzq" method="POST" id="contact-form">
-            <input type="text" name="name" placeholder="Your Name">
+            <!-- <input type="text" name="name" placeholder="Your Name"> -->
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
