--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
     </section>
     
 
-    <section id="contact">
+    <!-- <section id="contact">
         <h2>Contact Me</h2>
         <form action="https://formspree.io/f/xanjajzq" method="POST" id="contact-form">
-            <!-- <input type="text" name="name" placeholder="Your Name"> -->
+            <input type="text" name="name" placeholder="Your Name">
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
-    </section>
+    </section> -->
     
     <footer>
         <p>&copy; 2025 Tyler Jensen | All Rights Reserved</p>
