contact message hidden

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
             </div>
 
-        <section id="scroll-to-contact">
+       <!--  <section id="scroll-to-contact">
             <div class="scroll-indicator">
                 <a href="#contact">
                 <span></span>
@@ -175,7 +175,7 @@
                 </a>
             </div>
         </section>
-    </section>
+    </section> -->
     
 
     <!-- <section id="contact">
