Added Movie Search App

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
             </div>
         
             <div class="project-card">
+                <h3>Movie Search</h3>
+                <p><strong>Tech Stack:</strong> React</p>
+                <p>A movie database where users can search for movies and favorite them using the TMDB api.</p>
+                <a href="https://github.com/tjensen917/movie-search" class="view-code-link" target="_blank">View Code</a>
+            </div>
+
+            <div class="project-card">
                 <h3>Budget Tracker App</h3>
                 <p><strong>Tech Stack:</strong> React, Flask, MySQL</p>
                 <p>Personal budget tracker with editable entries, automatic monthly resets, and live updates of remaining budget. Built with individual user separation and real-time feedback.</p>
