--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 <a href="https://github.com/tjensen917/movie-search" class="view-code-link" target="_blank">View Code</a>
             </div>
 
+            div class="project-card">
+                <h3>Movie Search</h3>
+                <p><strong>Tech Stack:</strong> React</p>
+                <p>A movie database where users can search for movies and favorite them using the TMDB api.</p>
+                <a href="https://github.com/tjensen917/wordle-clone" class="view-code-link" target="_blank">View Code</a>
+            </div>
+
             <div class="project-card">
                 <h3>Budget Tracker App</h3>
                 <p><strong>Tech Stack:</strong> React, Flask, MySQL</p>
