--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
 
             div class="project-card">
-                <h3>Movie Search</h3>
+                <h3>Simplified Wordle Clone</h3>
                 <p><strong>Tech Stack:</strong> React</p>
                 <p>A movie database where users can search for movies and favorite them using the TMDB api.</p>
                 <a href="https://github.com/tjensen917/wordle-clone" class="view-code-link" target="_blank">View Code</a>
