--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <a href="https://github.com/tjensen917/movie-search" class="view-code-link" target="_blank">View Code</a>
             </div>
 
-            div class="project-card">
+            <div class="project-card">
                 <h3>Simplified Wordle Clone</h3>
                 <p><strong>Tech Stack:</strong> React</p>
-                <p>A movie database where users can search for movies and favorite them using the TMDB api.</p>
+                <p>A simplified version of Wordle. Missing visual keyboard, celebratory messages, and correct letter logic.</p>
                 <a href="https://github.com/tjensen917/wordle-clone" class="view-code-link" target="_blank">View Code</a>
             </div>
 
