--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
 
             <div class="project-card">
-                <h3>World Clone</h3>
+                <h3>Wordle Clone</h3>
                 <p><strong>Tech Stack:</strong> React</p>
                 <p>A simplified version of Wordle. Missing visual keyboard, celebratory messages, and correct letter logic.</p>
                 <a href="https://github.com/tjensen917/wordle-clone" class="view-code-link" target="_blank">View Code (In Progress)</a>
