--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <img src="images\hero-bg.png" alt="Tyler Jensen" class="profile-pic">
-            <a href="resume/Tyler_Jensen_Resume.pdf" class="btn" download>Download Resume</a>
+            <a href="resume/Tyler_Jensen_Res.pdf" class="btn" download>Download Resume</a>
         </div>
         <section id="scroll-to-projects">
             <div class="scroll-indicator">
